# virdi

./: pyproject.toml
src/virdi/: __init__.py  bri.py  compute.py  core.py
