[project]
name = "virdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "lindi>=0.4.5",
    "matplotlib>=3.10.6",
    "polars>=1.33.0",
    "pynapple>=0.9.2",
    "pynwb>=3.1.2",
    "spatial-manifolds",
]

[project.scripts]
virdi = "virdi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
spatial-manifolds = { path = "../spatial-manifolds" }
